--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "embla-carousel-react": "^8.5.2",
     "express": "^5.2.1",
     "express-validator": "^7.3.1",
+    "gsap": "^3.14.1",
     "input-otp": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.487.0",
