--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.2",
+    "socket.io": "^4.7.2",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
